# kbnf-syntax

./: Cargo.toml  README.md
src/: config.rs  expression.rs  grammar.rs  lib.rs  node.rs  parser.rs  regex.rs  semantic_error.rs  simplified_grammar.rs  suffix_automaton.rs  utils.rs  validated_grammar.rs
src/snapshots/: ebnf__grammar__test__comment_except.snap.new  ebnf__grammar__test__empty_grammar2.snap  ebnf__grammar__test__simplify_grammar.snap  ebnf__grammar__test__simplify_grammar.snap.new  ebnf__grammar__test__simplify_grammar10.snap  ebnf__grammar__test__simplify_grammar11.snap  ebnf__grammar__test__simplify_grammar11.snap.new  ebnf__grammar__test__simplify_grammar2.snap  ebnf__grammar__test__simplify_grammar2.snap.new  ebnf__grammar__test__simplify_grammar3.snap  ebnf__grammar__test__simplify_grammar3.snap.new  ebnf__grammar__test__simplify_grammar4.snap  ebnf__grammar__test__simplify_grammar5.snap  ebnf__grammar__test__simplify_grammar6.snap  ebnf__grammar__test__simplify_grammar6.snap.new  ebnf__grammar__test__simplify_grammar9.snap  ebnf__parser__test__alternation_precidence.snap  ebnf__parser__test__alternation_precidence_group.snap  ebnf__parser__test__alternation_precidence_multiple.snap  ebnf__parser__test__alternation_precidence_nested.snap  ebnf__parser__test__any_special_nonterminal.snap  ebnf__parser__test__comment_except.snap  ebnf__parser__test__comment_except.snap.new  ebnf__parser__test__concat_precidence.snap  ebnf__parser__test__concat_precidence_reverse.snap  ebnf__parser__test__escaped_nonterminal.snap  ebnf__parser__test__except_special_nonterminal.snap  ebnf__parser__test__except_special_nonterminal1.snap  ebnf__parser__test__except_special_nonterminal2.snap  ebnf__parser__test__multiple_underscores.snap  ebnf__parser__test__simple_alternation.snap  ebnf__parser__test__space_before_semi.snap  ebnf__parser__test__underscore.snap  kbnf_syntax__grammar__test__indirect_right_recursive_grammar.snap  kbnf_syntax__grammar__test__linked_list.snap  kbnf_syntax__grammar__test__regex_complement.snap  (+27 more)
