[package]
name = "kbnf-syntax"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "An internal syntax crate for kbnf crate"
readme = "README.md"
keywords = ["ebnf", "bnf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
parse-hyperlinks = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
regex-syntax = "0.8.3"
string-interner = "0.17.0"
thiserror = "1.0.60"
rustc-hash = "1.1.0"
kbnf-regex-automata="0.4.7"
unescaper = "0.1.5"
[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }
