[package]
name = "kbnf-syntax"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "An internal syntax crate for kbnf crate"
readme = "README.md"
keywords = ["ebnf", "bnf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
parse-hyperlinks = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
regex-syntax = "0.8.4"
string-interner = "0.17.0"
thiserror = "1.0.63"
rustc-hash = "2.0.0"
kbnf-regex-automata="0.4.10"
unescaper = "0.1.5"
regex-lite = "0.1.6"
general-sam = "1.0.0"
[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
